fixed overflow of h3 on cards

--- a/style/mobile.scss
+++ b/style/mobile.scss
@@ -269,7 +269,7 @@ div.menu-open {
     
         h3 {
           flex-basis: 60px;
-          font-size: 2rem;
+          font-size: 1.7rem;
           margin: 0;
           display: flex;
           align-items: center;
